@@ -6,10 +6,9 @@ use Module::Build qw( );
 my $build = Module::Build->new(
    module_name => 'LWP::Protocol::AnyEvent::http',
    dist_author => 'Eric Brine <ikegami@adaelis.com>',
-   license     => 'CC0_1_0',
+   license     => 'unrestricted',  # CC0 license, version 1.0
    configure_requires => {
-      'Module::Build'              => 0.36_14,
-      'Software::License::CC0_1_0' => 0,
+      'Module::Build' => 0.36_14,
    },
    build_requires => {
       'Carp'         => 0,
