@@ -1,6 +1,7 @@
 Revision history for LWP-Protocol-AnyEvent-http
 
 1.16.0  ~~~~-~~-~~
+        - Adjust license field of META to match spec.
         - ~~~
 
 1.14.0  2018-05-13
